# steam-launch-option-manager

./: Cargo.toml  bogged.txt  local_test.vdf  test.vdf
config_file_reader/: Cargo.toml
config_file_reader/src/: lib.rs
parser/: Cargo.toml
parser/src/: config_parse.rs  lib.rs  local_config_parse.rs
src/: main.rs  services.rs
src/apps/: get_game_launch_configs.rs  mod.rs  set_game_launch_configs.rs
src/domain/: mod.rs  steam_config.rs
src/infra/: config_file_reader.rs  mod.rs
src/services/: installed_proton_versions.rs  steamlocate_dir.rs
src/services/vdf_parser/: mod.rs  parse_vdf.rs
src/traits/: config_reader.rs  mod.rs  parser.rs  proton_versions.rs  steam_dir.rs
src/ui/: main.slint
src/vdf_parser/: parse_vdf.rs
tests/: config.vdf  localconfig.vdf
