[package]
name = "steam-launch-option-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyvalues-serde = "0.1.0"
serde = { version = "1.0.0", features = ["derive"] }
eframe = { version = "0.27.2", features = [ "default", "__screenshot" ] }
parser = { path = "./parser" }
config_file_reader = { path = "./config_file_reader" }

[workspace]
members = [
    "parser",
    "config_file_reader"
]