[package]
name = "steam-launch-option-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyvalues-serde = "0.1.0"
serde = { version = "1.0.0", features = ["derive"] }
eframe = { version = "0.27.2", features = [ "default", "__screenshot" ] }
thiserror = "1.0"
keyvalues-parser = "0.2.0"
anyhow = "1.0.81"
steamlocate = "1.2.1"

[workspace]
members = [
    "config_file_reader"
]