[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyvalues-serde = "0.1.0"
thiserror = "1.0"
serde = { version = "1.0.0", features = ["derive"] }

[dev-dependencies]
collapse = "0.1.2"